Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -78,7 +78,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/Spencer-Hasch/
   trulia_url: http://www.trulia.com/profile/spencer-hasch-agent-san-antonio-tx-364554/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/san-antonio-real-estate-podcast-with-spencer-hasch/id1202397211?mt=2
 
 podcast:
   title: San Antonio Real Estate Podcast With Spencer Hasch
