--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 baseurl: ""
 # the base hostname & protocol for your site. Don't let it end in '/' or you'll mess the links up
 # Change for production:
-url: "http://growmygoals.com"
+url: "http://Kronenbergreg.com "
 
 # Build settings
 markdown: kramdown
