--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.trianglehousehunting.com/s/Find-Out-How-Much-Your-North-Carolina-Home-Is-Worth?utm_campaign=patty
+  first_CTA_URL: http://www.viewdurhamraleighhomes.com/homevalue/HomeEstimate
   second_CTA_text: Home Search
   second_CTA_URL: http://www.viewdurhamraleighhomes.com/
   VR_form: http://oi.vresp.com?fid=196692a4fb
@@ -41,7 +41,7 @@ second_sidebar_CTA:
     CTA_title2: What's Your Home Worth?
     CTA_text2: Thinking of selling or interested in learning about a neighbor's house? We can help you see what it's worth.
     CTA_link_text2: Free Home Value Report
-    CTA_url2: http://www.trianglehousehunting.com/s/Find-Out-How-Much-Your-North-Carolina-Home-Is-Worth?utm_campaign=patty
+    CTA_url2: http://www.viewdurhamraleighhomes.com/homevalue/HomeEstimate
 
 lender:
   show_section: false
