--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Andross"
 baseurl: ""
 # the base hostname & protocol for your site. Don't let it end in '/' or you'll mess the links up
 # Change for production:
-url: "localhost:4000"
+url: "http://blog.savvyagent.biz"
 
 # Build settings
 markdown: kramdown
