--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,13 +20,13 @@ client:
   phone2:
   phone2_type:
   email: thechadsmithteam@gmail.com
-  url: http://www.viewdfwhomes.com
+  url: https://www.dfwpowersearch.com
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.viewdfwhomes.com/homevalue/default
+  first_CTA_URL: https://www.dfwpowersearch.com/home-valuation/
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.viewdfwhomes.com/search
+  second_CTA_URL: https://www.dfwpowersearch.com/
   VR_form: http://oi.vresp.com?fid=0cfc419fb2
 
 sidebar_CTA:
@@ -34,14 +34,14 @@ sidebar_CTA:
     CTA_title: "What’s Your -- MARKET -- Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: http://www.viewdfwhomes.com/homevalue/default
+    CTA_url: https://www.dfwpowersearch.com/home-valuation/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
     CTA_title2: "Looking for a -- MARKET -- Home?"
     CTA_text2: "Search the entire MLS for your -- MARKET -- home."
     CTA_link_text2: "Search the MLS"
-    CTA_url2: http://www.viewdfwhomes.com/search
+    CTA_url2: https://www.dfwpowersearch.com/
 
 lender:
   show_section: false
