--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,61 +1,53 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Jeff Cook
   license_number:
-  about_markdown: |
-    'As the #1 Residential resale agent in the Charleston area for 5 years in a row, Jeff Cook is more than capable of handling the sale of your home in a satisfactory manner. You will not find a more experienced, driven, and successful group than the Jeff Cook Real Estate Group. Whether you are looking to buy or sell, you will find a team that is willing to put your satisfaction at the forefront of the business.
-    Jeff hopes to provide you with a superior buying and selling process with free reports on Charleston homes for sale and local listings of all homes for sale in Charleston. With a deep knowledge of the local area and a decade of experience within the field of real estate, Jeff is sure to exceed all of your expectations. If you want someone who will work tirelessly to ensure your satisfaction, then you are looking in the right place.'
+  about_markdown: 'As the #1 Residential real estate agent in the Charleston area for 5 years in a row, Jeff Cook is more than capable of handling the sale of your home in a satisfactory manner. You will not find a more experienced, driven, and successful group than the Jeff Cook Real Estate team. Whether you are looking to buy or sell, you will find a team that is willing to put your satisfaction at the forefront of the business. Jeff hopes to provide you with a superior buying and selling process with free reports on Charleston homes for sale and local listings of all homes for sale in Charleston. With a deep knowledge of the local area and over a decade of experience within the field of real estate, Jeff is sure to exceed all of your expectations. If you want someone who will work tirelessly to ensure your satisfaction, then you are looking in the right place.'
   market: Charleston
   brand: Jeff Cook Real Estate
   brokerage:
-  address: Offices in Summerville, Charleston,<br>West Ashley, and Mount Pleasant
+  address: 'Offices in Summerville, Charleston,<br>West Ashley, and Mount Pleasant'
   phone: 843-225-2002
   phone_type:
   phone2:
   phone2_type:
   email: Info@JeffCookRealEstate.com
-  url: http://www.jeffcookrealestate.com
-
+  url: 'http://www.jeffcookrealestate.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.jeffcookrealestate.com/s/Find%20Out%20How%20Much%20Your%20Charleston%20Home%20is%20Worth
+  first_CTA_URL: 'http://www.jeffcookrealestate.com/s/Find%20Out%20How%20Much%20Your%20Charleston%20Home%20is%20Worth'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.jeffcookrealestate.com/search.aspx
-  VR_form: http://oi.vresp.com?fid=3691844c05
-
+  second_CTA_URL: 'http://www.jeffcookrealestate.com/search.aspx'
+  VR_form: 'http://oi.vresp.com?fid=3691844c05'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your -- MARKET -- Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: http://www.jeffcookrealestate.com/s/Find%20Out%20How%20Much%20Your%20Charleston%20Home%20is%20Worth
-
+    CTA_title: What’s Your -- MARKET -- Home Worth?
+    CTA_text: Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you.
+    CTA_link_text: Free -- MARKET -- Home Value Report
+    CTA_url: 'http://www.jeffcookrealestate.com/s/Find%20Out%20How%20Much%20Your%20Charleston%20Home%20is%20Worth'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: http://www.jeffcookrealestate.com/search.aspx
-
+    CTA_title2: Looking for a -- MARKET -- Home?
+    CTA_text2: Search the entire MLS for your -- MARKET -- home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'http://www.jeffcookrealestate.com/search.aspx'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -64,35 +56,33 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/JeffCookRealEstate
-  linkedin_url: https://www.linkedin.com/pub/jeff-cook/9/886/402/
-  gplus_url: https://plus.google.com/118053037830105268903/about
-  youtube_url: https://www.youtube.com/user/JeffCookRealestate1
-  twitter_url: https://twitter.com/JeffCookRE
+  facebook_url: 'https://www.facebook.com/JeffCookRealEstate'
+  linkedin_url: 'https://www.linkedin.com/pub/jeff-cook/9/886/402/'
+  gplus_url: 'https://plus.google.com/118053037830105268903/about'
+  youtube_url: 'https://www.youtube.com/user/JeffCookRealestate1'
+  twitter_url: 'https://twitter.com/JeffCookRE'
   instagram_url:
   pinterest_url:
-  zillow_url: http://www.zillow.com/profile/JeffCookRealtor/
+  zillow_url: 'http://www.zillow.com/profile/JeffCookRealtor/'
   trulia_url:
-  yelp_url: http://www.yelp.com/biz/jeff-cook-real-estate-summerville
+  yelp_url: 'http://www.yelp.com/biz/jeff-cook-real-estate-summerville'
   podcast_url:
-
 podcast:
   title: Charleston Real Estate Podcast with Jeff Cook
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: -- MARKET -- Real Estate Video Blog
+  hero_text: '-- MARKET -- Real Estate Video Blog'
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
@@ -102,13 +92,11 @@ site_colors:
   theme_text_color: '#333333'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: rgba(25, 64, 121, .5)
-
+  shadow_color: 'rgba(25, 64, 121, 0.5)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
