Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ client:
   name: Shawna Brooks
   license_number:
   about_markdown: |
-    Shawna's Home Team is a local Real Estate Team that live and work in Greenwood, Indiana for over 16 years. We specialize in buyer-specific marketing that produces top dollar results. Shawan graduated from Taylor University in 1994 with a Bachelors in Music Education and was an elementary school teacher before joining the Real Estate business is 2000. Call or text us today 317.886.8228. We are here to help you with any of your Real Estate needs!
+    Shawna's Home Team is a local Real Estate Team made up of people who have lived and worked in Greenwood, Indiana for over 16 years. We specialize in buyer-specific marketing that produces top dollar results. Shawna graduated from Taylor University in 1994 with a Bachelors in Music Education and was an elementary school teacher before joining the Real Estate business is 2000. Call or text us today 317.886.8228. We are here to help you with any of your Real Estate needs!
   market: Indianapolis
   brand: Shawna's Home Team
   brokerage: Keller Williams
