--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,6 @@ defaults:
     values:
       layout: "default"
 tags:
-  - Market Update
-  - Real Estate
-  - Home Buyer Tips
-  - Home Seller Tips
+  - Agent Advice
+  - Agent Interviews
+  - Keller Williams Success Stories
