--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -64,9 +64,9 @@ welcome_box:
 
 socials:
   review_sm_icons: false
-  facebook_url:
+  facebook_url: https://www.facebook.com/savvyagentbiz/
   linkedin_url:
-  gplus_url: https://plus.google.com/u/0/109496717352169727952
+  gplus_url: https://plus.google.com/b/110726765764972327361
   youtube_url: https://www.youtube.com/channel/UC_sgXod_eppF2WRfLlWZ1YA
   twitter_url:
   instagram_url:
