--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -38,7 +38,7 @@ sidebar_CTA:
     CTA_title: Looking to Build Your Real Estate Career?
     CTA_text: Let's talk about how The Dave Friedman Team can take your business to new heights.
     CTA_link_text: Request a Free Strategy Session
-    CTA_url: http://clickcharlestonsc.com/recruit.php
+    CTA_url: http://clickcharlestonsc.com/resources/careers
 
 lender:
   show_section: false
