--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,7 +79,7 @@ podcast:
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
 images:
-  client_headshot_path: /uploads/jeff-cook-headshot.jpg
+  client_headshot_path: /uploads/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
   hero_text: '-- MARKET -- Real Estate Video Blog'
