--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,7 +30,7 @@ CTAs:
   first_CTA_URL: https://www.thedaileygroup.com/home-valuation/
   second_CTA_text: Home Search
   second_CTA_URL: https://www.thedaileygroup.com/
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=f596820ea0
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
