--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -94,7 +94,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 80
-  hero_text: -- MARKET -- Real Estate Video Blog
+  hero_text: Neal Bros Investment Group
   hero_background_hex: '#fff'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
