--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,7 +30,7 @@ CTAs:
   first_CTA_URL: /#
   # second_CTA_text: Home Search
   # second_CTA_URL: /homesearch/
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=d669a10a71
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
