--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,8 +9,8 @@ custom_links:
     url: /building-products
   - title: Careers
     url: /careers
-  - title: Futurity
-    url: /futurity
+  # - title: Futurity
+  #   url: /futurity
   - title: Health Care
     url: /health-care
 client:
@@ -122,38 +122,38 @@ client:
       VR_form:
       about_markdown: >-
         Jade Gingras is the Campus Recruiter of the Talent Acquisition team at Govig and Associates. She successfully places college professionals in an internship program that provides multiple learning objectives. Jade graduated from University of Arizona with a degree in Psychology and Business in 2015. Jade’s goals are to become an expert in the Human Resources field, help businesses become more efficient in their processes and give professionals opportunities to help further their careers.
-    - name: Sherri Huston
-      title: Sr. Vice President/ General Manager
-      specialty: Futurity
-      client_headshot_path: /img/headshot4.jpg
-      phone: 480-718-6105
-      email: sherri.huston@govig.com
-      VR_form: 'http://oi.vresp.com?fid=e08fb53196'
-      about_markdown: >-
-        Sherri Huston is the Senior Vice President, General Manager of Govig Futurity. Futurity helps companies
-        align their human capital strategy with their business strategy. Futurity is
-        an innovative talent focused solution that provides companies and employees with
-        a road-map and tools to accelerate future growth.
-
-
-
-        Futurity measures the organization’s capability to build the future they envision.
-        In addition, the process promotes employee engagement and provides the company with
-        individual development plans to enhance future growth opportunities.
-
-
-
-        Sherri has been with Govig for thirteen years and prior to leading Govig Futurity,
-        she led Govig’s Healthcare Group, one of the largest executive search firms serving
-        the senior housing industry.
-
-
-
-        Govig has a history of being a Best Places to work company with a culture that changes
-        people’s lives. Govig & Associates is the largest privately held firm in the Executive
-        Search Industry. The firm was founded in 1978, located in Scottsdale Arizona and works
-        nationwide in Construction, Building Products, Healthcare and the Biopharmaceutical industries.
-
+    # - name: Sherri Huston
+    #   title: Sr. Vice President/ General Manager
+    #   specialty: Futurity
+    #   client_headshot_path: /img/headshot4.jpg
+    #   phone: 480-718-6105
+    #   email: sherri.huston@govig.com
+    #   VR_form: 'http://oi.vresp.com?fid=e08fb53196'
+    #   about_markdown: >-
+    #     Sherri Huston is the Senior Vice President, General Manager of Govig Futurity. Futurity helps companies
+    #     align their human capital strategy with their business strategy. Futurity is
+    #     an innovative talent focused solution that provides companies and employees with
+    #     a road-map and tools to accelerate future growth.
+    #
+    #
+    #
+    #     Futurity measures the organization’s capability to build the future they envision.
+    #     In addition, the process promotes employee engagement and provides the company with
+    #     individual development plans to enhance future growth opportunities.
+    #
+    #
+    #
+    #     Sherri has been with Govig for thirteen years and prior to leading Govig Futurity,
+    #     she led Govig’s Healthcare Group, one of the largest executive search firms serving
+    #     the senior housing industry.
+    #
+    #
+    #
+    #     Govig has a history of being a Best Places to work company with a culture that changes
+    #     people’s lives. Govig & Associates is the largest privately held firm in the Executive
+    #     Search Industry. The firm was founded in 1978, located in Scottsdale Arizona and works
+    #     nationwide in Construction, Building Products, Healthcare and the Biopharmaceutical industries.
+    #
 
     - name: Hadley Gayles
       title: Sr. Vice President/ General Manager
