first proof final run through

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,8 +69,8 @@ socials:
   review_sm_icons: false
   facebook_url: http://www.facebook.com/brianriolorealestate
   linkedin_url: https://www.linkedin.com/in/brianriolo
-  gplus_url: http://plus.google.com/u/0/+BrianRioloRealtor
-  youtube_url: http://www.youtube.com/c/BrianRioloRealtor
+  gplus_url: https://plus.google.com/b/105445460452937793373
+  youtube_url: https://www.youtube.com/channel/UCoUN_714zQGghLsGv466CzA
   twitter_url: https://twitter.com/brianriolo
   instagram_url:
   pinterest_url: https://www.pinterest.com/brianriolo
