Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -71,7 +71,7 @@ socials:
   gplus_url: https://plus.google.com/u/0/+BradKorb/about
   youtube_url: https://www.youtube.com/channel/UCiJwvniUev3k1C6rqTEvscQ
   twitter_url: https://twitter.com/bradkorb
-  instagram_url:
+  instagram_url: https://www.instagram.com/bradkorbrealestategroup/
   pinterest_url:
   zillow_url: http://www.zillow.com/profile/Brad-Korb/
   trulia_url: http://www.trulia.com/profile/brad-korb-agent-burbank-ca-77679
