Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ socials:
   zillow_url: http://www.zillow.com/profile/Treu-Group/
   trulia_url: http://www.trulia.com/profile/treugroup/
   yelp_url: http://www.yelp.com/biz/treu-group-real-estate-delray-beach?nb=1
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/palm-beach-real-estate-podcast-with-the-treu-group/id1263657510?mt=2
 
 podcast:
   title: Palm Beach Real Estate Podcast with The Treu Group
