--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,7 +28,7 @@ CTAs:
   first_CTA_URL: http://www.rioloresidentialgroup.com/Sellers/Get-a-Free-Home-Evaluation
   second_CTA_text: Home Search
   second_CTA_URL: http://www.rioloresidentialgroup.com/
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=afd90d0fc9
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
