--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -77,7 +77,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/Brian-Riolo/
   trulia_url: https://www.trulia.com/profile/brian-riolo-agent-hoboken-nj-zgcfhss6/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/hoboken-real-estate-podcast-with-brian-riolo/id1263668182?mt=2
 
 podcast:
   title: Hoboken Real Estate Podcast with Brian Riolo
