Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
   url: 'http://andrew.hhande.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.hhande.com/home-evaluation.php
+  first_CTA_URL: http://andrew.hhande.com/whats-my-home-worth.php
   second_CTA_text: Home Search
   second_CTA_URL: http://andrew.hhande.com/idx/
   VR_form:
@@ -33,7 +33,7 @@ sidebar_CTA:
   CTA_title: "What’s Your Home Worth?"
   CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
   CTA_link_text: "Free Home Value Report"
-  CTA_url: http://www.hhande.com/home-evaluation.php
+  CTA_url: http://andrew.hhande.com/whats-my-home-worth.php
 sidebar_CTA2:
   CTA_image_path2: /img/cta-images/005.jpg
   CTA_title2: "Looking for a Home?"
