--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,8 +69,8 @@ socials:
   review_sm_icons: true
   facebook_url: https://www.facebook.com/WhiteGroupKW
   linkedin_url: https://www.linkedin.com/company/the-white-group-with-keller-williams-realty
-  gplus_url:
-  youtube_url:
+  gplus_url: https://plus.google.com/u/0/b/101074782864579348154/
+  youtube_url: https://www.youtube.com/channel/UCdiw-cqKdg7LK76o2ehdz8Q
   twitter_url: https://twitter.com/whitegroupkw
   instagram_url: https://www.instagram.com/thewhitegroupkw/
   pinterest_url:
