--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -66,7 +66,7 @@ welcome_box:
     receive expert tips for buying or selling a home.
 
 socials:
-  review_sm_icons: true
+  review_sm_icons: false
   facebook_url: https://www.facebook.com/WhiteGroupKW
   linkedin_url: https://www.linkedin.com/company/the-white-group-with-keller-williams-realty
   gplus_url: https://plus.google.com/u/0/b/101074782864579348154/
