taking futurity option off form

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -186,9 +186,9 @@ client:
   address: '7150 E. Camelback Road Suite 555<br>Scottsdale, AZ 85251'
   url: 'http://govig.com'
   first_CTA_text: Request a Consultation
-  first_CTA_URL: 'http://govig.com/request-information/'
+  first_CTA_URL: /contact-us/
   second_CTA_text: Hire Us
-  second_CTA_URL: 'http://govig.com/contact'
+  second_CTA_URL: /contact-us/
 welcome_headline: Free Career Advancement Video Tips
 welcome_text_markdown: Subscribe to our email list to get answers when working with a recruiter to find your dream career or place your perfect candidate.
 socials:
