--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,7 +26,7 @@ client:
   first_CTA_URL: http://www.jtexsells.com/evaluation
   second_CTA_text: Home Search
   second_CTA_URL: http://www.jtexsells.com/listing
-  phone_CTA: true
+  phone_CTA: false
   VR_form: http://oi.vresp.com?fid=e45d0c2036
 welcome_headline: Get Educated About Real Estate
 welcome_text_markdown: |
