--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -89,6 +89,8 @@ podcast:
 
 images:
   client_headshot_path: /img/headshot.jpg
+  client_headshot_path2: /img/headshot2.jpg
+  client_headshot_path3: /img/headshot3.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
   hero_text: Kauai Real Estate Video Blog
