--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ CTAs:
   first_CTA_URL: /consultation/
   second_CTA_text: Home Search
   second_CTA_URL: /homesearch/
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=4c7f249ffd
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
