Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,9 +19,9 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: clint@nealteam.com
+  email: Clint@nealteam.com
   email_type: Clint
-  email2: shane@nealteam.com
+  email2: Shane@nealteam.com
   email2_type: Shane
   url: https://www.mysanantoniohomesearch.com
 
