--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 audit_header: false
 title: Bigfork Real Estate Video Blog with Scott Hollinger
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-show_custom_links: false
+show_custom_links: true
 custom_links:
   - title:
     url:
