--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ description: 'If you are looking to buy or sell a home, get all the information 
 show_custom_links: true
 custom_links:
   -title: Client Testimonials
-  -url: /client-testimonials
+   url: /client-testimonials
 client:
   name: Scott Hollinger
   license_number:
