--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,8 +12,8 @@ client:
   about_markdown: |
     Brent Dildine has over 15 years experience in the Real Estate industry. He works with both buyers and sellers, specializing in residential re-sale properties, and new construction. His extensive knowledge of the Greater Boise area, as well as many professional relationships with lenders, builders, title companies, and developers makes Brent Dildine your best source for your real estate needs!
   market: Boise
-  brand:
-  brokerage: Realty One Centre of Boise
+  brand: Realty One Centre of Boise
+  brokerage:
   address: 7310 Potomac Drive Boise, ID 83704
   phone: 208-919-2424
   phone_type:
