--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -82,7 +82,7 @@ socials:
 podcast:
   title: Alex Lam Royal Pacific Realty Podcast
   categories: Education
-  image: /img/podcast.jpg
+  image: http://i.imgur.com/lmaE3Us.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Alex Lam - your professional Royal Pacific Realty Real Estate Agent.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in vancouver, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
