--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ client:
   market: San Antonio
   brand: Neal Bros, LLC
   brokerage:
-  address: 10999 IH10 W Suite 175 San Antonio, TX 78230
+  address: 10999 IH 10 W Suite 175 San Antonio, TX 78230
   phone: 210-844-0393
   phone_type:
   phone2:
@@ -61,11 +61,7 @@ lender:
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
-    professionals can answer any questions you might have about real estate investments.
-    Subscribe to this blog to get the latest news on local market trends and
-    receive expert tips for buying or selling a home for investing.
+    We are a full-service investment group that focuses on the relationships with real estate agents. Our mission is to provide top notch service and be an allied resource when an agent has a property that will be a hard sell or distressed situation.
 
 socials:
   review_sm_icons: false
@@ -94,7 +90,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 80
-  hero_text: Neal Bros Investment Group
+  hero_text: We purchase the good, the bad, and the ugly when it comes to real estate.
   hero_background_hex: '#fff'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
