--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,9 +30,9 @@ client:
   url: www.CallUrsula.com
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: 'http://www.wilsonkw.com'
+  first_CTA_URL: 'http://callursula.com/sellers'
   second_CTA_text: Home Search
-  second_CTA_URL: 'http://www.wilsonkw.com'
+  second_CTA_URL: 'http://callursula.com/search'
   VR_form: 'http://oi.vresp.com?fid=9c5a0ebf6b'
 sidebar_CTA:
   CTA_image_path: /img/cta-images/001.jpg
