--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -39,7 +39,7 @@ sidebar_CTA:
   CTA_title: Looking to Buy a Home?
   CTA_text: Search the entire MLS for homes located in -- MARKET --.
   CTA_link_text: Home Search Tool
-  CTA_url: 'http://www.wilsonkw.com'
+  CTA_url: 'http://callursula.com/search'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
