Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ description: >-
 show_custom_links: true
 custom_links:
   - title: About
-    url: 'http://www.callursula.com/'
+    url: 'http://callursula.com/about/Jason-Wilson/6013'
 client:
   name: Jason Wilson
   license_number: 333062
