--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/margolisteam/
   linkedin_url: https://www.linkedin.com/in/kauairon/
-  gplus_url: 
+  gplus_url: https://plus.google.com/u/0/b/106733431793488765719
   youtube_url: https://www.youtube.com/channel/UClMr8tCG_H8uBeoKYs4ZASQ
   twitter_url: 
   instagram_url:
