--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -59,7 +59,7 @@ lender:
   url: http://eyegoop.com
 
 welcome_box:
-  welcome_headline: Join Our -- MARKET -- VIP List
+  welcome_headline: Join Our VIP List
   welcome_text_markdown: >
     We are a full-service investment group that focuses on the relationships with real estate agents. Our mission is to provide top notch service and be an allied resource when an agent has a property that will be a hard sell or distressed situation.
 
@@ -90,7 +90,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 80
-  hero_text: We purchase the good, the bad, and the ugly when it comes to real estate.
+  hero_text: We purchase <strong>the good, the bad, and the ugly</strong> when it comes to real estate.
   hero_background_hex: '#fff'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
