Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ client:
   about_markdown: |
     At the Chad Smith Team, we are achieving great results for our clients.    In the last 12 months, Chad and his team have sold 185 homes and our  listings have sold for over 99.2% of list price!  Our commitment is to treat every one of our clients with a spirit of excellence in every aspect of the home buying or home selling process.
   market: Dallas
-  brand: Chad Smith Real Solutions Team
+  brand: Chad Smith Real Estate Solutions Team
   brokerage: Keller Williams Realty
   address: 1301 S Bowen Road Suite 125, Arlington, TX 76013
   phone: 817-264-7653
