Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,7 +20,7 @@ client:
   phone2:
   phone2_type:
   email: jeremy.qualley39@gmail.com
-  url: http://www.skrealtyinc.com/
+  url: http://www.skrealtyinc.com
 
 CTAs:
   first_CTA_text: Home Valuation
