Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,7 +13,7 @@ client:
 
   market:
   brand: J. Qualley & Associates
-  brokerage: SK Realty Inc
+  brokerage: SK Realty Inc.
   address: 219 W Main Ave West Fargo, ND 58078
   phone: 701.306.1823
   phone_type:
