--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ client:
   license_number: 
   about_markdown: |
 
-  market:
+  market: Fargo/Moorhead
   brand: J. Qualley & Associates
   brokerage: SK Realty Inc.
   address: 219 W Main Ave West Fargo, ND 58078
