--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -27,7 +27,7 @@ CTAs:
   first_CTA_URL: http://www.carbuttirealestate.com/home-valuation
   second_CTA_text: Home Search
   second_CTA_URL: http://www.carbuttirealestate.com
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=bb38540c56
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
@@ -95,7 +95,7 @@ socials:
 podcast:
   title: '-- MARKET -- Real Estate Podcast with -- CLIENT NAME --'
   categories: Education
-  image: /img/podcast.jpg
+  image: /img/podcast.png
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
