--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,8 +68,8 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/DeuceKirkTeam
   linkedin_url: https://www.linkedin.com/in/deuce-kirk-11518790
-  gplus_url:
-  youtube_url:
+  gplus_url: https://plus.google.com/b/116636813422366707587
+  youtube_url: https://www.youtube.com/channel/UC_lY2HuXi5lk98AwOF3W89g
   twitter_url: https://twitter.com/deucekirk
   instagram_url:
   pinterest_url:
