--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -103,7 +103,7 @@ images:
 site_colors:
   brand_color: '#003323'
   theme_color: '#00422d'
-  theme_text_color: '#353535'
+  theme_text_color: '#ffffff'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
 header_shadow:
