Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,9 @@ client:
   name: Jeremy Qualley
   license_number: 
   about_markdown: |
+    A North Dakota native, Jeremy has lived in the surrounding Fargo area nearly all his life. Jeremy is dedicated to God, his family, friends, community, hard work, and desire to be the best person he can be everyday. From a young age, Jeremy was born with Real Estate in his blood with his family coming from a Real Estate background.
 
+    Jeremy takes pride in his proven marketing strategies of getting his clients and their family out of their current homes and into the future home of their dreams. At the same time, his buying strategies of getting First Time Home Buyers, families outgrowing their current home and owners wanting to downsize are very modernized and effective in this fast paced ever changing Real Estate market.
   market: 
   brand: J. Qualley & Associates
   brokerage: SK Realty Inc.
